-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.9.2, 6.10.0 Beta4
-
None
-
-
659a100f4 (dev), aeae47d67 (6.10), 0c6a373ae (tqtc/lts-6.8)
Steps to reproduce (C++)
- Launch old example qtbase\tests\manual\examples\widgets\mainwindows
- Undock a dock, move it around rapidly
- Observe crash ( qtbug140207_stack.txt )
PySide report
When running the attached code, moving a docked widget rapidly around the app will cause a "Windows fatal exception: access violation"
Steps to reproduce:
- Launch the attached code
- Hold a dock as if to drag it around
- Move it rapidly back and forth around the app while holding it.
- is duplicated by
-
PYSIDE-3229 Crash of QDockWidget example upon window movement
-
- Closed
-
-
QTBUG-141350 [REG 6.5.8 -> 6.5.10] Crash when moving QDockWidget elements
-
- Closed
-
| For Gerrit Dashboard: QTBUG-140207 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 682470,1 | QWidgetAnimator: make sure to remove all destroyed animations | tqtc/lts-6.5 | qt/tqtc-qtbase | Status: NEW | 0 | 0 |